kết hợp xếp cặp, cập nhật tỉ số đối với category đôi và đơn